feat: Preprocessing work

--- a/brain/preprocessing.ipynb
+++ b/brain/preprocessing.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "device(type='cpu')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,6 +61,7 @@
     "from brain_solver import Wav2Vec2 as w2v\n",
     "from brain_solver import Filters, FilterType\n",
     "from transformers.utils import logging\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Suppress warnings if desired\n",
     "import warnings\n",
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +307,7 @@
        "4  0.000000      0.00   0.000000   0.000000    1.000000  Other  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,119 +381,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the Filters class\n",
+    "ft = Filters(order=5)\n",
+    "\n",
+    "# Define filter parameters for each filter type\n",
+    "cutoffs = {\n",
+    "    FilterType.LOWPASS: 50.0,  # Cutoff frequency for lowpass\n",
+    "    FilterType.HIGHPASS: 0.1,  # Cutoff frequency for highpass\n",
+    "    FilterType.BANDPASS: [0.1, 50.0],  # Low and high cutoff frequencies for bandpass\n",
+    "    FilterType.BANDSTOP: [45.0, 55.0],  # Low and high cutoff frequencies for bandstop\n",
+    "}\n",
+    "fs = 250  # Sampling rate (Hz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i, f in tqdm(enumerate(files), total=len(files)):\n",
+    "#     name = f[:-8]\n",
+    "\n",
+    "#     # First, handle the wav2vec-only processing\n",
+    "#     # Define a directory for wav2vec processed data without filtering\n",
+    "#     w2v_only_dir = os.path.join(config.data_w2v_specs, 'wav2vec_only')\n",
+    "#     os.makedirs(w2v_only_dir, exist_ok=True)\n",
+    "    \n",
+    "#     # Define output filename for wav2vec processed data without filtering\n",
+    "#     w2v_only_output_filename = os.path.join(w2v_only_dir, f\"{name}.npy\")\n",
+    "    \n",
+    "#     # Check if wav2vec processed data without filtering needs to be generated\n",
+    "#     if not os.path.exists(w2v_only_output_filename) or force_regenerate:\n",
+    "#         try:\n",
+    "#             # Load the data from the parquet file\n",
+    "#             parquet_file = pd.read_parquet(os.path.join(read_path, f))\n",
+    "#             data_for_processing = parquet_file.iloc[:, 1:].values\n",
+    "#             # Assuming data_for_processing needs to be in a specific format for wav2vec, adjust as necessary\n",
+    "            \n",
+    "#             # Process with wav2vec and save\n",
+    "#             w2v_only_output = w2v.wav2vec2(data_for_processing)\n",
+    "#             np.save(w2v_only_output_filename, w2v_only_output)\n",
+    "#         except Exception as e:\n",
+    "#             print(f\"ERROR: An unexpected error occurred for {name} (wav2vec only): {e}\")\n",
+    "\n",
+    "#     # Then, continue with the existing loop for filtered data processing\n",
+    "#     for filter_type, cutoff in cutoffs.items():\n",
+    "#         # Define directories for raw and w2v processed data\n",
+    "#         raw_dir = os.path.join(config.data_w2v_specs, filter_type.name, 'raw')\n",
+    "#         w2v_dir = os.path.join(config.data_w2v_specs, filter_type.name, 'w2v')\n",
+    "        \n",
+    "#         # Ensure directories exist\n",
+    "#         os.makedirs(raw_dir, exist_ok=True)\n",
+    "#         os.makedirs(w2v_dir, exist_ok=True)\n",
+    "        \n",
+    "#         # Define output filenames for raw and w2v processed data\n",
+    "#         raw_output_filename = os.path.join(raw_dir, f\"{name}.npy\")\n",
+    "#         w2v_output_filename = os.path.join(w2v_dir, f\"{name}.npy\")\n",
+    "        \n",
+    "#         try:\n",
+    "#             # Check if raw filtered data needs to be processed\n",
+    "#             if not os.path.exists(raw_output_filename) or force_regenerate:\n",
+    "#                 if 'data_for_processing' not in locals():\n",
+    "#                     # Load the data only if it hasn't been loaded already\n",
+    "#                     parquet_file = pd.read_parquet(os.path.join(read_path, f))\n",
+    "#                     data_for_processing = parquet_file.iloc[:, 1:].values\n",
+    "#                 parquet_file_non_nan = np.nan_to_num(data_for_processing, nan=0)\n",
+    "                \n",
+    "#                 filtered_spectrogram = ft.apply_filter_to_spectrogram(parquet_file_non_nan, cutoff, fs, filter_type)\n",
+    "#                 np.save(raw_output_filename, filtered_spectrogram)\n",
+    "                \n",
+    "#             # Check if w2v processed data needs to be generated\n",
+    "#             if not os.path.exists(w2v_output_filename) or force_regenerate:\n",
+    "#                 if 'filtered_spectrogram' not in locals():\n",
+    "#                     # Load the existing raw filtered data if it wasn't just generated\n",
+    "#                     filtered_spectrogram = np.load(raw_output_filename)\n",
+    "                \n",
+    "#                 w2v_output = w2v.wav2vec2(filtered_spectrogram)\n",
+    "#                 np.save(w2v_output_filename, w2v_output)\n",
+    "\n",
+    "#         except Exception as e:\n",
+    "#             print(f\"ERROR: An unexpected error occurred for {name}: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 , "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1000086677\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1000189855\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1000317312\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1000381196\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1000493950\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1000646093\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1000655456\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1000757705\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1001335039\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1001616430\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1001782302\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/100193677\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1001944237\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1002038108\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1002078310\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1002209002\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/100228337\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1002318990\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1002360431\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1002394133\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1002731701\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/100277663\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1002784785\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1002921461\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1002948107\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1003145721\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1003176141\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1003279800\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/100332931\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1003735183\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1003751899\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1003790564\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1004024952\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1004032094\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1004260719\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1004296522\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1004843846\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1004935258\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1005228554\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1005283689\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1005356669\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1005390159\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1005800134\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1006082535\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1006186695\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1006492097\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1006610068\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1007135024\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/100726803\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1007574618\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1007629392\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1007658782\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1007938258\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1008021540\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1008031879\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1008148805\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1008302041\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1008340234\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1008358381\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1008462378\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1008753122\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1008910345\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1009414554\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1009489006\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1009616880\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1009815187\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1009917194\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1009976810\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1009997570\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1010172668\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1010184710\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1010393451\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1010653043\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1010728139\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1010741928\n",
-      "/home/osloup/NoodleNappers/brain/data/out/w2v_specs_filter/1010764973\n"
+      "There are 17089 EEG spectrogram NPYs\n"
      ]
     }
    ],
    "source": [
-    "for i, f in enumerate(files):\n",
-    "    name = f[:-8]\n",
+    "read_path_eeg = config.path_to_eeg_spectrograms_folder\n",
     "\n",
-    "    if i % 100 == 0:\n",
-    "        print(i, \", \", end=\"\")\n",
+    "files_eeg = os.listdir(read_path_eeg)\n",
+    "print(f\"There are {len(files_eeg)} EEG spectrogram NPYs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Output folder for wav2vec if does not exist\n",
+    "if not os.path.exists(config.data_w2v_specs_eeg):\n",
+    "    os.makedirs(config.data_w2v_specs_eeg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "force_regenerate=False\n",
+    "min_length=1600"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/17089 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a directory for wav2vec processed data without filtering\n",
+    "w2v_only_dir = os.path.join(config.data_w2v_specs_eeg, 'wav2vec_only')\n",
+    "os.makedirs(w2v_only_dir, exist_ok=True)\n",
     "\n",
-    "    if not os.path.exists(config.data_w2v_specs + f\"{name}.npy\"):\n",
-    "        try:\n",
-    "\n",
-    "            parquet_file = pd.read_parquet(os.path.join(read_path, f))\n",
-    "\n",
-    "            # Here will luppo eventually try to use filters on the spectograms and later on the RAW data in the loop\n",
-    "            parquet_file = parquet_file.iloc[:, 1:].values # FILTERS\n",
+    "for eeg_id, spectrogram_path in tqdm(enumerate(files_eeg), total=len(files_eeg)):\n",
+    "    name = spectrogram_path[:-8]\n",
+    "    \n",
+    "    \n",
+    "    # Define output filename for wav2vec processed data without filtering\n",
+    "    w2v_only_output_filename = os.path.join(w2v_only_dir, f\"{eeg_id}.npy\")\n",
+    "    \n",
+    "    # Process with wav2vec (no filter)\n",
+    "    if force_regenerate or not os.path.exists(w2v_only_output_filename):\n",
+    "        # Assuming w2v.wav2vec2 can handle the preprocessed_data directly\n",
+    "        # padded_spectrogram = pad_sequence(padded_spectrogram, min_length)\n",
+    "        spectrogram = np.load(os.path.join(read_path_eeg, spectrogram_path))\n",
+    "        w2v_output = w2v.wav2vec2(spectrogram, proc_eegs=True)\n",
+    "        np.save(w2v_only_output_filename, w2v_output)\n",
+    "        \n",
+    "        load = np.load(w2v_only_output_filename)\n",
+    "        print(spectrogram.shape)\n",
+    "        print(\"haha\")\n",
+    "        print(load.shape)\n",
+    "        exit()\n",
+    "        \n",
+    "    for filter_type in cutoffs:\n",
+    "        # Define directories for raw and w2v processed data within each filter type folder\n",
+    "        raw_dir = os.path.join(config.data_w2v_specs_eeg, filter_type.name, 'raw')\n",
+    "        w2v_dir = os.path.join(config.data_w2v_specs_eeg, filter_type.name, 'w2v')\n",
+    "        os.makedirs(raw_dir, exist_ok=True)\n",
+    "        os.makedirs(w2v_dir, exist_ok=True)\n",
+    "        \n",
+    "        # Define output filenames for raw and w2v processed data within their respective directories\n",
+    "        raw_output_filename = os.path.join(raw_dir, f\"{eeg_id}.npy\")\n",
+    "        w2v_output_filename = os.path.join(w2v_dir, f\"{eeg_id}.npy\")\n",
+    "        \n",
+    "        if force_regenerate or not os.path.exists(raw_output_filename) or not os.path.exists(w2v_output_filename):\n",
+    "            # Apply filter\n",
+    "            cutoff = cutoffs[filter_type]\n",
+    "            filtered_spectrogram = ft.apply_filter_to_spectrogram(spectrogram, cutoff, fs, filter_type)\n",
     "            \n",
-    "            parquet_file = w2v.wav2vec2(parquet_file)\n",
-    "            np.save(config.data_w2v_specs + f\"{name}\", parquet_file)\n",
+    "            # Save raw filtered data\n",
+    "            np.save(raw_output_filename, filtered_spectrogram)\n",
+    "            \n",
+    "            # Process filtered data with wav2vec\n",
+    "            # padded_filtered_spectrogram = pad_sequence(filtered_spectrogram, min_length)\n",
+    "            w2v_filtered_output = w2v.wav2vec2(filtered_spectrogram, proc_eegs=True)\n",
     "\n",
-    "        except Exception as e:\n",
-    "            print(f\"ERROR: An unexpected error occurred for {name}: {e}\")\n"
+    "            np.save(w2v_output_filename, w2v_filtered_output)"
    ]
   }
  ],
