feat: Please nicely rebuild my shit, thank you

--- a/brain/training.ipynb
+++ b/brain/training.ipynb
@@ -183,59 +183,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "spectrograms = {}\n",
-        "\n",
-        "for i, f in tqdm(enumerate(files_npy), total=len(files_npy)):\n",
-        "    name = f[:-4]\n",
-        "\n",
-        "    datapath = config.data_w2v_specs + f\"{name}.npy\"\n",
-        "    if os.path.exists(datapath):\n",
-        "        spectrograms[int(name)] = np.load(datapath)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "spectrograms_old = hp.read_spectrograms(\n",
+        "spectrograms = hp.read_spectrograms(\n",
         "    config.data_spectograms,\n",
         "    config.path_to_brain_spectrograms_npy,\n",
         "    config.should_read_brain_spectograms,\n",
         ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "print(spectrograms[2099504343])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "print(len(spectrograms_old[2099504343][0]))\n",
-        "print(len(spectrograms_old[2099504343]))\n",
-        "print(len(spectrograms_old))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "print(len(spectrograms[2099504343]))\n",
-        "print(len(spectrograms[2099504343][0][0]))\n",
-        "print(len(spectrograms[2099504343][0]))\n",
-        "print(len(spectrograms))"
       ]
     },
     {
