--- a/brain/ensemble.ipynb
+++ b/brain/ensemble.ipynb
@@ -60,6 +60,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7a8c7b7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install d2l --no-index --find-links=file:///kaggle/input/d2l-package/d2l/\n",
+    "# !pip install /kaggle/input/brain-solver/brain_solver-0.9.0-py3-none-any.whl"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "id": "fcd4a036",
    "metadata": {},
