Split training into 2 stages

--- a/brain/training.ipynb
+++ b/brain/training.ipynb
@@ -45,16 +45,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From c:\\Users\\tygof\\Documents\\Semester 8\\MLiP\\NoodleNappers\\venv\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+            "\n"
+          ]
+        },
         {
           "data": {
             "text/plain": [
               "device(type='cuda')"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -108,7 +116,6 @@
         "# full_path = \"/home/osloup/NoodleNappers/brain/data/\"\n",
         "full_path = \"C:/Users/tygof/Documents/Semester 8/MLiP/NoodleNappers/brain/data/\"\n",
         "config = Config(full_path,  full_path + \"out/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False, USE_PRETRAINED_MODEL=True, FINE_TUNE=True)\n",
-        "\n",
         "\n",
         "# full_path = \"/kaggle/input/\"\n",
         "# config = Config(full_path, \"/kaggle/working/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False, USE_PRETRAINED_MODEL=False, FINE_TUNE=False)\n",
@@ -186,7 +193,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Train non-overlap eeg_id shape: (17089, 12)\n"
+            "WARNING:tensorflow:From c:\\Users\\tygof\\Documents\\Semester 8\\MLiP\\NoodleNappers\\venv\\lib\\site-packages\\keras\\src\\utils\\losses_utils.py:325: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n",
+            "Train non-overlap eeg_id shape: (17089, 13)\n"
           ]
         }
       ],
@@ -232,6 +241,7 @@
               "      <th>grda_vote</th>\n",
               "      <th>other_vote</th>\n",
               "      <th>target</th>\n",
+              "      <th>kl</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -249,6 +259,7 @@
               "      <td>0.166667</td>\n",
               "      <td>0.583333</td>\n",
               "      <td>Other</td>\n",
+              "      <td>4.584192</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -264,6 +275,7 @@
               "      <td>0.000000</td>\n",
               "      <td>0.071429</td>\n",
               "      <td>LPD</td>\n",
+              "      <td>4.870032</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -279,6 +291,7 @@
               "      <td>0.000000</td>\n",
               "      <td>1.000000</td>\n",
               "      <td>Other</td>\n",
+              "      <td>7.802345</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -294,6 +307,7 @@
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>GPD</td>\n",
+              "      <td>7.802345</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -309,6 +323,7 @@
               "      <td>0.000000</td>\n",
               "      <td>1.000000</td>\n",
               "      <td>Other</td>\n",
+              "      <td>7.802345</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -322,12 +337,12 @@
               "3  751790   618728447       908.0       908.0       38549           0.0   \n",
               "4  778705    52296320         0.0         0.0       40955           0.0   \n",
               "\n",
-              "   lpd_vote  gpd_vote  lrda_vote  grda_vote  other_vote target  \n",
-              "0  0.000000      0.25   0.000000   0.166667    0.583333  Other  \n",
-              "1  0.857143      0.00   0.071429   0.000000    0.071429    LPD  \n",
-              "2  0.000000      0.00   0.000000   0.000000    1.000000  Other  \n",
-              "3  0.000000      1.00   0.000000   0.000000    0.000000    GPD  \n",
-              "4  0.000000      0.00   0.000000   0.000000    1.000000  Other  "
+              "   lpd_vote  gpd_vote  lrda_vote  grda_vote  other_vote target        kl  \n",
+              "0  0.000000      0.25   0.000000   0.166667    0.583333  Other  4.584192  \n",
+              "1  0.857143      0.00   0.071429   0.000000    0.071429    LPD  4.870032  \n",
+              "2  0.000000      0.00   0.000000   0.000000    1.000000  Other  7.802345  \n",
+              "3  0.000000      1.00   0.000000   0.000000    0.000000    GPD  7.802345  \n",
+              "4  0.000000      0.00   0.000000   0.000000    1.000000  Other  7.802345  "
             ]
           },
           "execution_count": 7,
@@ -494,7 +509,8 @@
         "    n_splits=5,\n",
         "    batch_size_train=32,\n",
         "    batch_size_valid=64,\n",
-        "    max_epochs=4,\n",
+        "    max_epochs_first_stage=5,\n",
+        "    max_epochs_second_stage=3,\n",
         "    num_workers=3,\n",
         ")"
       ]
