feat: Formatting and more clearning

--- a/brain/preprocessing.ipynb
+++ b/brain/preprocessing.ipynb
@@ -71,17 +71,27 @@
    "outputs": [],
    "source": [
     "from brain_solver import Config\n",
-    "full_path = \"/home/osloup/NoodleNappers/brain/data/\" # Luppo\n",
+    "\n",
+    "full_path = \"/home/osloup/NoodleNappers/brain/data/\"  # Luppo\n",
     "# full_path = \"C:/Users/tygof/Documents/Semester 8/MLiP/NoodleNappers/brain/data/\" # Tygo\n",
     "# full_path = \"C:/Users/dahbl/Documents/TrueDocs/Uni/Year 4/Semester 2/Machine Learning in Practice/brain/brain/data/\" # Dick\n",
-    "config = Config(full_path,  full_path + \"out/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False, USE_PRETRAINED_MODEL=False)\n",
+    "config = Config(\n",
+    "    full_path,\n",
+    "    full_path + \"out/\",\n",
+    "    USE_EEG_SPECTROGRAMS=True,\n",
+    "    USE_KAGGLE_SPECTROGRAMS=True,\n",
+    "    should_read_brain_spectograms=False,\n",
+    "    should_read_eeg_spectrogram_files=False,\n",
+    "    USE_PRETRAINED_MODEL=False,\n",
+    ")\n",
     "\n",
     "# Kaggle Pull\n",
     "# full_path = \"/kaggle/input/\"\n",
     "# config = Config(full_path, \"/kaggle/working/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False, USE_PRETRAINED_MODEL=False)\n",
     "\n",
     "import sys\n",
-    "sys.path.append(full_path + 'kaggle-kl-div')\n",
+    "\n",
+    "sys.path.append(full_path + \"kaggle-kl-div\")\n",
     "# from kaggle_kl_div import score"
    ]
   },
@@ -225,10 +235,10 @@
     "#     # Define a directory for wav2vec processed data without filtering\n",
     "#     w2v_only_dir = os.path.join(config.data_w2v_specs, 'wav2vec_only')\n",
     "#     os.makedirs(w2v_only_dir, exist_ok=True)\n",
-    "    \n",
+    "\n",
     "#     # Define output filename for wav2vec processed data without filtering\n",
     "#     w2v_only_output_filename = os.path.join(w2v_only_dir, f\"{name}.npy\")\n",
-    "    \n",
+    "\n",
     "#     # Check if wav2vec processed data without filtering needs to be generated\n",
     "#     if not os.path.exists(w2v_only_output_filename) or force_regenerate:\n",
     "#         try:\n",
@@ -236,7 +246,7 @@
     "#             parquet_file = pd.read_parquet(os.path.join(read_path, f))\n",
     "#             data_for_processing = parquet_file.iloc[:, 1:].values\n",
     "#             # Assuming data_for_processing needs to be in a specific format for wav2vec, adjust as necessary\n",
-    "            \n",
+    "\n",
     "#             # Process with wav2vec and save\n",
     "#             w2v_only_output = w2v.wav2vec2(data_for_processing)\n",
     "#             np.save(w2v_only_output_filename, w2v_only_output)\n",
@@ -248,15 +258,15 @@
     "#         # Define directories for raw and w2v processed data\n",
     "#         raw_dir = os.path.join(config.data_w2v_specs, filter_type.name, 'raw')\n",
     "#         w2v_dir = os.path.join(config.data_w2v_specs, filter_type.name, 'w2v')\n",
-    "        \n",
+    "\n",
     "#         # Ensure directories exist\n",
     "#         os.makedirs(raw_dir, exist_ok=True)\n",
     "#         os.makedirs(w2v_dir, exist_ok=True)\n",
-    "        \n",
+    "\n",
     "#         # Define output filenames for raw and w2v processed data\n",
     "#         raw_output_filename = os.path.join(raw_dir, f\"{name}.npy\")\n",
     "#         w2v_output_filename = os.path.join(w2v_dir, f\"{name}.npy\")\n",
-    "        \n",
+    "\n",
     "#         try:\n",
     "#             # Check if raw filtered data needs to be processed\n",
     "#             if not os.path.exists(raw_output_filename) or force_regenerate:\n",
@@ -265,21 +275,21 @@
     "#                     parquet_file = pd.read_parquet(os.path.join(read_path, f))\n",
     "#                     data_for_processing = parquet_file.iloc[:, 1:].values\n",
     "#                 parquet_file_non_nan = np.nan_to_num(data_for_processing, nan=0)\n",
-    "                \n",
+    "\n",
     "#                 filtered_spectrogram = ft.apply_filter_to_spectrogram(parquet_file_non_nan, cutoff, fs, filter_type)\n",
     "#                 np.save(raw_output_filename, filtered_spectrogram)\n",
-    "                \n",
+    "\n",
     "#             # Check if w2v processed data needs to be generated\n",
     "#             if not os.path.exists(w2v_output_filename) or force_regenerate:\n",
     "#                 if 'filtered_spectrogram' not in locals():\n",
     "#                     # Load the existing raw filtered data if it wasn't just generated\n",
     "#                     filtered_spectrogram = np.load(raw_output_filename)\n",
-    "                \n",
+    "\n",
     "#                 w2v_output = w2v.wav2vec2(filtered_spectrogram)\n",
     "#                 np.save(w2v_output_filename, w2v_output)\n",
     "\n",
     "#         except Exception as e:\n",
-    "#             print(f\"ERROR: An unexpected error occurred for {name}: {e}\")\n"
+    "#             print(f\"ERROR: An unexpected error occurred for {name}: {e}\")"
    ]
   },
   {
@@ -311,8 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "force_regenerate=False\n",
-    "min_length=1600"
+    "force_regenerate = False\n",
+    "min_length = 1600"
    ]
   },
   {
@@ -322,16 +332,15 @@
    "outputs": [],
    "source": [
     "# Define a directory for wav2vec processed data without filtering\n",
-    "w2v_only_dir = os.path.join(config.data_w2v_specs_eeg, 'wav2vec_only')\n",
+    "w2v_only_dir = os.path.join(config.data_w2v_specs_eeg, \"wav2vec_only\")\n",
     "os.makedirs(w2v_only_dir, exist_ok=True)\n",
     "\n",
     "for eeg_id, spectrogram_path in tqdm(enumerate(files_eeg), total=len(files_eeg)):\n",
     "    name = spectrogram_path[:-8]\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    # Define output filename for wav2vec processed data without filtering\n",
     "    w2v_only_output_filename = os.path.join(w2v_only_dir, f\"{eeg_id}.npy\")\n",
-    "    \n",
+    "\n",
     "    # Process with wav2vec (no filter)\n",
     "    if force_regenerate or not os.path.exists(w2v_only_output_filename):\n",
     "        # Assuming w2v.wav2vec2 can handle the preprocessed_data directly\n",
@@ -339,32 +348,38 @@
     "        spectrogram = np.load(os.path.join(read_path_eeg, spectrogram_path))\n",
     "        w2v_output = w2v.wav2vec2(spectrogram, proc_eegs=True)\n",
     "        np.save(w2v_only_output_filename, w2v_output)\n",
-    "        \n",
+    "\n",
     "        load = np.load(w2v_only_output_filename)\n",
     "        print(spectrogram.shape)\n",
     "        print(\"haha\")\n",
     "        print(load.shape)\n",
     "        exit()\n",
-    "        \n",
+    "\n",
     "    for filter_type in cutoffs:\n",
     "        # Define directories for raw and w2v processed data within each filter type folder\n",
-    "        raw_dir = os.path.join(config.data_w2v_specs_eeg, filter_type.name, 'raw')\n",
-    "        w2v_dir = os.path.join(config.data_w2v_specs_eeg, filter_type.name, 'w2v')\n",
+    "        raw_dir = os.path.join(config.data_w2v_specs_eeg, filter_type.name, \"raw\")\n",
+    "        w2v_dir = os.path.join(config.data_w2v_specs_eeg, filter_type.name, \"w2v\")\n",
     "        os.makedirs(raw_dir, exist_ok=True)\n",
     "        os.makedirs(w2v_dir, exist_ok=True)\n",
-    "        \n",
+    "\n",
     "        # Define output filenames for raw and w2v processed data within their respective directories\n",
     "        raw_output_filename = os.path.join(raw_dir, f\"{eeg_id}.npy\")\n",
     "        w2v_output_filename = os.path.join(w2v_dir, f\"{eeg_id}.npy\")\n",
-    "        \n",
-    "        if force_regenerate or not os.path.exists(raw_output_filename) or not os.path.exists(w2v_output_filename):\n",
+    "\n",
+    "        if (\n",
+    "            force_regenerate\n",
+    "            or not os.path.exists(raw_output_filename)\n",
+    "            or not os.path.exists(w2v_output_filename)\n",
+    "        ):\n",
     "            # Apply filter\n",
     "            cutoff = cutoffs[filter_type]\n",
-    "            filtered_spectrogram = ft.apply_filter_to_spectrogram(spectrogram, cutoff, fs, filter_type)\n",
-    "            \n",
+    "            filtered_spectrogram = ft.apply_filter_to_spectrogram(\n",
+    "                spectrogram, cutoff, fs, filter_type\n",
+    "            )\n",
+    "\n",
     "            # Save raw filtered data\n",
     "            np.save(raw_output_filename, filtered_spectrogram)\n",
-    "            \n",
+    "\n",
     "            # Process filtered data with wav2vec\n",
     "            # padded_filtered_spectrogram = pad_sequence(filtered_spectrogram, min_length)\n",
     "            w2v_filtered_output = w2v.wav2vec2(filtered_spectrogram, proc_eegs=True)\n",
