--- a/training.ipynb
+++ b/training.ipynb
@@ -105,9 +105,9 @@
    "source": [
     "from brain_solver import Config\n",
     "\n",
-    "full_path = \"/home/osloup/NoodleNappers/brain/data/\"  # Luppo\n",
-    "# full_path = \"C:/Users/tygof/Documents/Semester 8/MLiP/NoodleNappers/brain/data/\" # Tygo\n",
-    "# full_path = \"C:/Users/dahbl/Documents/TrueDocs/Uni/Year 4/Semester 2/Machine Learning in Practice/brain/brain/data/\" # Dick\n",
+    "full_path = \"/home/osloup/NoodleNappers/data/\"  # Luppo\n",
+    "# full_path = \"C:/Users/tygof/Documents/Semester 8/MLiP/NoodleNappers/data/\" # Tygo\n",
+    "# full_path = \"C:/Users/dahbl/Documents/TrueDocs/Uni/Year 4/Semester 2/Machine Learning in Practice/brain/data/\" # Dick\n",
     "config = Config(\n",
     "    full_path,\n",
     "    full_path + \"out/\",\n",
@@ -126,7 +126,7 @@
     "import sys\n",
     "\n",
     "sys.path.append(full_path + \"kaggle-kl-div\")\n",
-    "# from kaggle_kl_div import score"
+    "from kaggle_kl_div import score"
    ]
   },
   {
@@ -295,7 +295,6 @@
     "    n_splits=5,\n",
     "    batch_size_train=32,\n",
     "    batch_size_valid=64,\n",
-    "    max_epochs=4,\n",
     "    num_workers=3,\n",
     ")"
    ]
@@ -355,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
