Clean up training notebook

--- a/training.ipynb
+++ b/training.ipynb
@@ -213,6 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train the model\n",
     "all_oof, all_true, valid_loaders = br.cross_validate_eeg(\n",
     "    config,\n",
     "    device,\n",
@@ -224,6 +225,8 @@
     "    batch_size_train=32,\n",
     "    batch_size_valid=64,\n",
     "    num_workers=3,\n",
+    "    max_epochs_first_stage=5,\n",
+    "    max_epochs_second_stage=3,\n",
     ")"
    ]
   },
@@ -233,9 +236,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_oof, all_true = br.validate_model_across_folds(\n",
-    "    config, device, all_oof, all_true, valid_loaders\n",
-    ")"
+    "# Validate the model\n",
+    "all_oof, all_true = br.validate_model_across_folds(config, device, all_oof, all_true, valid_loaders)"
    ]
   },
   {
