Clean up inference notebook

--- a/training.ipynb
+++ b/training.ipynb
@@ -92,7 +92,7 @@
     "- **Training Parameters**: Configures training details like epochs, batch size, and learning rate.\n",
     "- **Feature Flags**: Toggles for using model settings, wavelets, spectrograms, and reading options.\n",
     "\n",
-    "We designed this class for easy adjustments to facilitate model development and experimentation.\n"
+    "We designed this class for easy adjustments to facilitate model development and experimentation."
    ]
   },
   {
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create Output folder if does not exist\n",
+    "# Create output folder if it does not exist\n",
     "if not os.path.exists(config.output_path):\n",
     "    os.makedirs(config.output_path)\n",
     "\n",
