Add missing import

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -65,9 +65,9 @@
     "from transformers.utils import logging\n",
     "from brain_solver import (\n",
     "    Helpers as hp,\n",
-    "    BrainModel as br,\n",
     "    EEGDataset,\n",
     "    Config,\n",
+    "    Trainer as tr,\n",
     ")\n",
     "\n",
     "# Suppress warnings\n",
